Added commands from UI till arduino to change brightness of LEDs. In the UI it is a value from 0 to 5, then mapped to 0 - 1023 in arduino. Implements #28

--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -160,3 +160,36 @@ img.center {
   display: table-cell;
   vertical-align: middle; 
 }
+
+#brightnessIndicator {
+    border-color: #000000;
+    border-radius: 30px;
+    padding: 12px 20px 12px 30px;
+    width: 120px;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.level0 {
+    background: #ffffff;
+}
+
+.level1 {
+    background: #FFFFCC;
+}
+
+.level2 {
+    background: #ffff99;
+}
+
+.level3 {
+    background: #ffff66;
+}
+
+.level4 {
+    background: #ffff33;
+}
+
+.level5 {
+    background: #FFFF00;
+}
