--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -170,26 +170,75 @@ img.center {
     border-width: 1px;
 }
 
-.level0 {
+#brightnessIndicator.level0 {
     background: #ffffff;
 }
 
-.level1 {
+#brightnessIndicator.level1 {
     background: #FFFFCC;
 }
 
-.level2 {
+#brightnessIndicator.level2 {
     background: #ffff99;
 }
 
-.level3 {
+#brightnessIndicator.level3 {
     background: #ffff66;
 }
 
-.level4 {
+#brightnessIndicator.level4 {
     background: #ffff33;
 }
 
-.level5 {
+#brightnessIndicator.level5 {
     background: #FFFF00;
+}
+
+.battery0 {
+    background: #ffffff;
+}
+
+#batteryIndicator{
+    width:50px;
+    height: 22px;
+    background-image: url('../img/batterylevel.png');
+    background-repeat:no-repeat;
+    background-position:0px 0px;
+}
+
+#batteryIndicator.level1 {
+    background-position:0px 0px;
+}
+
+#batteryIndicator.level2 {
+    background-position: 0px -24px;
+}
+
+#batteryIndicator.level3 {
+    background-position: 0px -49px;
+}
+
+#batteryIndicator.level4 {
+    background-position:0px -73px;
+}
+
+#batteryIndicator.level5 {
+    background-position:0px -96px;
+}
+
+#connectionHealth{
+    margin:5px 10px;
+    width:30px;
+    height: 30px;
+    background-image: url('../img/bbconnection.png');
+    background-repeat:no-repeat;
+    background-position:0px 0px;
+}
+
+#connectionHealth.false {
+    background-position:0px 0px;
+}
+
+#connectionHealth.true {
+    background-position: -29px 0px;
 }
