Work on #25 to show details of firmware upload to the user

--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -261,3 +261,9 @@ img.center {
 #connectionHealth.true {
     background-position: -29px 0px;
 }
+
+#arduiniFirmware-details {
+  width: 95%;
+  height: 90px;
+  margin-top: 10px;
+}
