--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -29,6 +29,7 @@ body {
   border-right: 1px solid grey;
   height: 100%;
 }
+
 .drop-in-right {
   position: fixed;
   display: none;
@@ -117,6 +118,20 @@ body {
   height: 90px;
   background-color: white;
   
+}
+
+.invisible-field input[type="text"]{
+    border: 0;
+    color: #000df6;
+    font-weight: bold;
+    -webkit-box-shadow:none;
+    box-shadow:none;
+    -moz-box-shadow:none;
+    margin-bottom: 0;
+}
+
+.invisible-field label {
+    display: inline;
 }
 
 .controller img {
