Replaced video size bounding css that was not intended to be checked in.

--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -155,6 +155,8 @@ img.center {
 }
 
 #video {
+  width: 640px;
+  min-height: 480px;  
   border: 2px solid black;
   border-radius: 10px;
   padding: 10px;
