Added inital HUD plugin code from ardrone-weblifht

--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -296,3 +296,19 @@ img.center {
   height: 90px;
   margin-top: 10px;
 }
+
+#horizon {
+    opacity: 0.5;
+    position: absolute;
+    z-index: 3;
+    top: 0px;
+    left: 0px;
+}
+
+#compass {
+	position: absolute;
+	width: 100%;
+	height: 30px;
+	bottom: 0;
+	z-index: 5;
+}
