--- a/src/plugins/touchcontroller/public/css/style.css
+++ b/src/plugins/touchcontroller/public/css/style.css
@@ -1,5 +1,8 @@
-//css for the plugin
-#example {
-    display: block;
-    float: right;
+//css for touchcontroller
+.testoverlay {
+    opacity: 0.5;
+    z-index: 3;
+    top: 0px;
+    left: 0px;
+    position: absolute;
 }
