--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -38,7 +38,7 @@
   <script type="text/javascript" src="<%= scripts[i] %>"></script><% } %>
 
   <body>
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar navbar-inverse navbar-fixed-top nav-collapse collapse">
           <div class="navbar-inner">
             <div id="menu" class="container-fluid">
               <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -66,7 +66,7 @@
 
               </div>
             </div>
-            <div id="rov_status_panel" class="span3 pull-right" style="overflow: auto; height: 100%">
+            <div id="rov_status_panel" class="span3 pull-right visible-desktop" style="overflow: auto; height: 100%">
                 <div id="gamepad" class="controller well well-small" >
                     <img src="themes/OpenROV/img/gamepad.png" class="center">
                     <p>Use the <i>2 sticks</i> to maneuver.</p>
