--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -60,7 +60,7 @@
         <!-- Main ROW -->
         <div id="main-row" class="container-fluid full-height">
           <div class="row-fluid full-height">
-            <div class="span9 border full-height" id="outher-videocontainer">
+            <div class="span9 border" id="outter-videocontainer">
               <div id="video-container" class="center" border='1'>
                 <img src="themes/OpenROV/img/no_camera.jpg" alt="OpenROV" id="video"/>
 
