Added shim for indexdb for IOS safari

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,6 +28,7 @@
 	<script type='text/javascript' src="js/cockpit.js"></script>
 	<script type='text/javascript' src="js/compass.js"></script>
 	<script src='js/libs/db.js'></script>
+	<script type='text/javascript' src="js/libs/IndexedDBShim.min.js"></script>
 	<script type='text/javascript' src="js/blackbox.js"></script>
 	<script type='text/javascript' src="js/horizon.js"></script>
         <script src="/config.js"></script>
