--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -182,15 +182,16 @@ img.center {
 }
 
 #main-row {
+  height: 80%;
  // padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
 
 #footer{
-  position: relative;
-  margin-top: -150px; /* negative value of footer height */
+  //position: relative;
+  //margin-top: -150px; /* negative value of footer height */
   height: 150px;
-  clear:both;
-  padding-top:20px;  
+  //clear:both;
+  //padding-top:20px;  
 }
 
 .full-height{
