switched video to use HTML5 video player. Initial lag indicator

--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -170,6 +170,7 @@ img.center {
 #video { 
   border: 2px solid black;
   background-color: black;
+  max-width: 100%;  
 }
 
 #video-container{
@@ -178,7 +179,6 @@ img.center {
 //  background-size: cover;
   background-position: center center;
   vertical-align: top;
-  background-image: url(../img/no_camera.jpg);
 }
 
 #main-row {
