Removed video controls

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -83,7 +83,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
             <div class="span9 border full-height" id="outter-videocontainer">
               <div id="video-container" class="full-height center pagination-centered" border='1'>
                 <!--img src="themes/OpenROV/img/no_camera.jpg" alt="OpenROV" id="video"/-->
-                <video id="video" controls poster="" autoplay>
+                <video id="video" poster="" autoplay>
                 </video>                
               </div>
             </div>
