Moved keyboard to header

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -67,6 +67,8 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
                 <span class="icon-bar"></span>
               </a>
               <p><a class="brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Cockpit</a></p>
+              <p><img id="keyboardinstructions" width="30px" class="brand logo" src="themes/OpenROV/img/keyboard.png" data-placement="bottom" rel='popover' title="keyboard commands" html="true" data-content="<p>Use the <i>Up</i>, <i>Down</i>, <i>Left</i>, <i>Right</i>, <i>Shift</i> and <i>Ctrl</i> keys to maneuver. Use <i>1</i>-<i>5</i> to set power. <i>7</i>,<i>8</i> (lift) and <i>9</i>,<i>0</i> (thrust) trim. Space for all stop.</p>" ></p>
+
               <div class="nav-collapse collapse">
                 <ul id="menuitems" class="nav pull-right">
                   <li><a href="#" id="show-settings">Settings</a></li>
@@ -88,11 +90,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
               </div>
             </div>
             <div id="rov_status_panel" class="span3 pull-right visible-desktop" style="overflow: auto; height: 100%">
-
-                <div id="keyboard" class="controller well well-small" >
-                    <img src="themes/OpenROV/img/keyboard.png" class="center">
-                    <p>Use the <i>Up</i>, <i>Down</i>, <i>Left</i>, <i>Right</i>, <i>Shift</i> and <i>Ctrl</i> keys to maneuver. Use <i>1</i>-<i>5</i> to set power. <i>7</i>,<i>8</i> (lift) and <i>9</i>,<i>0</i> (thrust) trim. Space for all stop.</p>
-                </div>
+              <div id="keyboard" class="controller well well-small" />
                 <div id="servoTilt" class="controller well well-small" >
                     
                     <p>Use <i>Q</i>, <i>A</i>, <i>Z</i> to tilt servo.</p>
@@ -243,7 +241,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
 	   
           });	  
 
-
+        $("[rel='popover']").popover();
         </script>
 
     </body>
