--- a/dashboard/src/views/index.ejs
+++ b/dashboard/src/views/index.ejs
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <title>OpenROV Dashboard MOCK</title>
+        <title>OpenROV Dashboard</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/bootstrap-responsive.css" rel="stylesheet">        
         <link rel="stylesheet" href="themes/OpenROV/css/style.css">
         <link href="css/ui-lightness/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
+ 
+ <% for(var i=0; i<styles.length; i++) { %>
+
+        <link rel="stylesheet" href="<%= styles[i] %>">
+<% } %>        
   </head>
 
   <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
-          <div class="navbar-inner">
+          <div class="navbar-inner"> 
             <div id="menu" class="container-fluid">
               <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </a>
-              <p><a class="brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Dashboard MOCK</a></p>
+              <p><a class="brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Dashboard</a></p>
               <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
                   <!--<li><a href="#" id="show-diagnostic">Diagnostic</a></li>-->
@@ -29,28 +34,7 @@
         
         <!-- Main ROW -->
         <div id="main-row" class="container-fluid full-height">
-          <div class="row">
-            <span class="span4">
-              Cockpit: <span data-bind="text: statusCockpit()"></span> 
-              <button class="btn" data-bind="click: startCockpit">Cockpit Running</button>
-              <button class="btn" data-bind="click: stopCockpit">Cockpit Stopped</button>
-            </span>
-          </div>
-          <div class="row">
-            <span class="span4">
-              Cloud9: <span data-bind="text: statusCloud9()"></span> 
-              <button class="btn" data-bind="click: startCloud9">Cloud9 Running</button>
-              <button class="btn" data-bind="click: stopCloud9">Cloud9 Stopped</button>
-            </span>
-          </div>
-        	<div class="row">
-        		<span class="span4">
-        			Samba: <span data-bind="text: statusSamba()"></span> 
-        			<button class="btn" data-bind="click: startSamba">Samba Running</button>
-        			<button class="btn" data-bind="click: stopSamba">Samba Stopped</button>
-        		</span>
-        	</div>
-		</div>
+    		</div>
         
         
         <!-- Le javascript
@@ -61,18 +45,29 @@
         <script type='text/javascript' src="js/libs/bootstrap.min.js"></script>
         <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
         <script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
-        <script type='text/javascript' src='mockJs/MockViewModel.js'></script>
+        <script type='text/javascript' src='js/DashboardViewModel.js'></script>
+        <script type='text/javascript' src='js/Dashboard.js'></script>
+        <script type='text/javascript' src='js/ProcessModel.js'></script>
     	<script type='text/javascript' src="js/blackbox.js"></script>
 	    <script src="/socket.io/socket.io.js"></script>
+
+<% for(var i=0; i<scripts.length; i++) { %>
+  <script type="text/javascript" src="<%= scripts[i] %>"></script>
+<% }  %>
 
         <script>
       		var viewmodel;
           $(function() {
 
             var socket = io.connect();
+            viewmodel = new DashboardViewModel(socket);
+            
+            var dashboard = new Dashboard(socket, viewmodel);
 
-			viewmodel = new MockViewModel(socket);
-            ko.applyBindings(viewmodel);
+            console.log('Applying bindings');
 
+            ko.applyBindings(dashboard.viewModel);
           });
         </script>
+  </body>
+</html>
