--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -167,6 +167,15 @@ img.center {
     display: block;
 }
 
+.navbar-fixed-top .brand img {
+    height: 32px;
+}
+
+.navbar-fixed-top .nav img {
+    width: 32px;
+    height: 32px;
+}
+
 #video { 
   border: 2px solid black;
   background-color: black;
@@ -180,6 +189,8 @@ img.center {
   background-position: center center;
   vertical-align: top;
 }
+
+
 
 #main-row {
   height: 80%;
@@ -215,10 +226,11 @@ img.center {
 
 #brightnessIndicator {
     width:250px;
-    height: 51px;
+    height: 22px;
     border:1px solid black;
     background-image: url('../img/brightness.png');
     background-repeat:no-repeat;
+    margin-top: 14px;
 }
 
 #brightnessIndicator.level0 {
