--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -60,7 +60,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
   <body>
   
   
-      <div class="navbar navbar-inverse navbar-fixed-top nav-collapse collapse">
+      <div class="navbar navbar-inverse navbar-fixed-top nav-collapse">
       <div class="navbar-inner">
         <a class="brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Cockpit</a>
         <ul class="nav" id="navtoolbar">
